--- a/src/Components/Share/Footer/Footer.css
+++ b/src/Components/Share/Footer/Footer.css
@@ -1,9 +1,9 @@
 
 
-.image{
+/* .image{
     background-image: url("https://eatsy.bold-themes.com/cupcakes/wp-content/uploads/sites/3/2021/02/footer_background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-}
+} */
 
 
